# backend_sistemaLivros

./: .dockerignore  .env  .gitignore  README.md  app.py  celery_app.py  dependecias.txt  deployment.yaml  docker-compose.yml  kafka_producer.py  livros.db  livrosimples.py  logstash.conf  main.py  pegapokemon.py  pyproject.toml  script.sh  service.yaml  tarefa2.py  tarefa3.py  tarefa4.py  tarefas.db  tasks.py  test_auth.py
.github/workflows/: python-app.yml
test/: test_task.py
