[project]
name = "virtualback"
version = "0.1.1"
description = "Sistema de Gerenciamento de Livros"
authors = [
    {name = "savifb",email = "savio.sousa@estudante.ifb.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "unicorn (>=2.1.4,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "redis (>=7.1.1,<8.0.0)",
    "fastapy (>=1.0.5,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
